force-app/main/default/objects/ccrz__E_RequestForQuote__c/ccrz__E_RequestForQuote__c.object-meta.xml
<CustomObject>
    <label>CC Request For Quote</label>
    <nameField>
        <displayFormat>RFQ-{000000}</displayFormat>
        <label>RFQ Auto Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Requests For Quote</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>