force-app/main/default/objects/ccrz__E_RequestForQuote__c/fields/ccrz__Account__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CC Requests For Quote</relationshipLabel>
    <relationshipName>CC_Requests_For_Quote</relationshipName>
    <type>Lookup</type>
</CustomField>