force-app/main/default/objects/ccrz__E_RequestForQuote__c/fields/ccrz__Company__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Company__c</fullName>
    <label>Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>