force-app/main/default/objects/ccrz__E_RequestForQuote__c/fields/ccrz__Contact__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Requests_For_Quote</relationshipName>
    <type>Lookup</type>
</CustomField>