force-app/main/default/objects/ccrz__E_RequestForQuote__c/fields/ccrz__Email__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>