force-app/main/default/objects/ccrz__E_RequestForQuote__c/fields/ccrz__FirstName__c.field-meta.xml
<CustomField>
    <fullName>ccrz__FirstName__c</fullName>
    <label>FirstName</label>
    <length>40</length>
    <type>Text</type>
</CustomField>