force-app/main/default/objects/ccrz__E_RequestForQuote__c/fields/ccrz__LastName__c.field-meta.xml
<CustomField>
    <fullName>ccrz__LastName__c</fullName>
    <label>LastName</label>
    <length>80</length>
    <type>Text</type>
</CustomField>