force-app/main/default/objects/ccrz__E_RequestForQuote__c/fields/ccrz__LeadSource__c.field-meta.xml
<CustomField>
    <fullName>ccrz__LeadSource__c</fullName>
    <label>Lead Source</label>
    <length>80</length>
    <type>Text</type>
</CustomField>