force-app/main/default/objects/ccrz__E_RequestForQuote__c/fields/ccrz__LeadStatus__c.field-meta.xml
<CustomField>
    <fullName>ccrz__LeadStatus__c</fullName>
    <label>LeadStatus</label>
    <length>80</length>
    <type>Text</type>
</CustomField>