force-app/main/default/objects/ccrz__E_RequestForQuote__c/fields/ccrz__NextStep__c.field-meta.xml
<CustomField>
    <fullName>ccrz__NextStep__c</fullName>
    <label>Next Step</label>
    <length>255</length>
    <type>Text</type>
</CustomField>