force-app/main/default/objects/ccrz__E_RequestForQuote__c/fields/ccrz__OpportunityName__c.field-meta.xml
<CustomField>
    <fullName>ccrz__OpportunityName__c</fullName>
    <label>Opportunity Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>