force-app/main/default/objects/ccrz__E_RequestForQuote__c/fields/ccrz__OpportunityType__c.field-meta.xml
<CustomField>
    <fullName>ccrz__OpportunityType__c</fullName>
    <label>Opportunity Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>