force-app/main/default/objects/ccrz__E_RequestForQuote__c/fields/ccrz__StageName__c.field-meta.xml
<CustomField>
    <fullName>ccrz__StageName__c</fullName>
    <label>Stage Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>